--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "antd": "^5.15.3",
     "axios": "^1.6.8",
     "concurrently": "^8.2.2",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
