--- a/package.json
+++ b/package.json
@@ -11,19 +11,27 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@codemirror/lang-javascript": "^6.2.2",
     "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.2.2",
+    "@uiw/codemirror-theme-darcula": "^4.21.25",
+    "@uiw/react-codemirror": "^4.21.25",
     "antd": "^5.15.3",
     "axios": "^1.6.8",
+    "codemirror": "^6.0.1",
     "concurrently": "^8.2.2",
     "moment": "^2.30.1",
     "multer": "^1.4.5-lts.1",
     "react": "^18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
-    "react-webcam": "^7.2.0"
+    "react-share": "^5.1.0",
+    "react-webcam": "^7.2.0",
+    "simple-peer": "^9.11.1",
+    "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
